wp-content/themes/sixgill/css/custom/all_solutions.css
.solutions-subpage-text, .solutions-subpage-thumbnail {
	text-align: left;
}

.solutions-subpage-text ul, ol {
	padding: 0;
	margin: 0;
	margin-bottom: 0.5em;
}

#press-text-post {
	text-align: left;
	margin-bottom: 30px;
}

.solutions-subpages-list {
	padding-bottom: 5px;
}

.solutions-subpage-text li{
	font-size: inherit;
}

.solution-subpage-suptitle {
	color: #4ddb5a;
}

.solution-subpage-title {
	color: #f9f8f8;
}

.solution-subpage-title , .solution-subpage-suptitle {
	font-weight: 800;
	text-transform: uppercase;
}

.solution-subpage-bottom-line {
	width: 0px;
	height: 0px;
	border-top: 1px solid #4ddb5a;
	width: 100px;
	margin-left: auto;
	margin-right: auto;
}

.solution-subpage-bottom-link-image-wrapper,
.solution-subpage-bottom-section-column,
.solutions-subpage-text,
.solutions-subpage-thumbnail,
.solution-subpage-bottom-link-text,
.solution-subpage-bottom-link-col {
	display: inline-block;
}

.solution-subpage-bottom-section-column:first-of-type {
		float: left;
}

.solution-subpage-bottom-section-column:last-of-type {
		float: right;
}

.solution-subpage-bottom-link-image-wrapper {
	width: 42%;
}

.solution-subpage-bottom-link-text {
	width: 56%;
	float: right;
}


.solution-subpage-third-block {
	width: 100%;
	height: 170px;
	background-color: #2e2e2e;
}

.solution-subpage-second-block {
	position: relative;
	text-align: center;
	width: 100%;
	background-color: #f8f8f8;
}

.solution-subpage-second-block-wrapper {
	display: inline-block;
}

.solution-subpage-gallery-block-title {
	font-weight: bold;
}

.solution-subpage-bottom-link-col {
	width: 50%;
}

.solution-subpage-bottom-section-subtitle {
	font-size: 20px;
	font-weight: normal;
	margin-bottom: 70px;
}

.solution-subpage-last-block-title {
	margin-bottom: 15px;
}

.solution-subpage-bottom-link-col {
	border-top: 1px solid #dfdfdf;
}

.solution-subpage-bottom-link-col:first-child {
	border-right: 1px solid #dfdfdf;
}

.solution-subpage-bottom-link-description, .solution-subpage-bottom-link {
	font-size: 22px;
}

.solution-subpage-bottom-link {
	text-decoration: underline !important;
}

.solution-subpage-bottom-link-description {
	margin-bottom: 10px;
	line-height: 1.3em !important;
}

.solution-subpage-bottom-link-text-width {
	width: 90%;
	margin-left: auto;
	margin-right: auto;
}

.green-line {
	height: 1px;
	width:10vw;
	background-color: green;
	margin:0 auto;
}

.solution-use-cases-block-content {
	background-color: #f8f8f8;
	border: 1px solid #dfdfdf;
}

.solution-use-cases-block-half{
	width: 50%;
	display: inline-block;

}

.solution-use-cases-block-image {
	display: inline-block;
	height: auto;
	width: 50%;
}

.solution-use-cases-block-subtitle{
	display: inline-block;
	width: 50%;
	text-align: center;
	vertical-align: middle;
}

.solution-use-cases-block-subtitle > p{
	margin:0;
	padding: 1vw;
}

.solution-use-cases-block-subtitle > a{
	font-size:16px;
}

.solution-subpage-gallery-button-icon, .solution-subpage-gallery-thumbnail {
	width: 100%;
	height: auto;
}

.solution-subpage-gallery-button {
	box-shadow: 0px 3px 0 0 #002d6f;
	cursor: pointer;
}

.solution-subpage-gallery-view-button {
	background-color: #0051c6;

}

.solution-subpage-gallery-download-button {
	background-color: #2e2e2e;
}

.solution-subpage-gallery-button-icon {
	width: 11%;
	height: auto;
}

.solution-subpage-gallery-button-title-wrapper {
	display: inline-block;
}

.solution-subpage-first-block-image {
	height: auto;
}

.container-subpage {
	margin-right: auto;
	margin-left: auto;
}

.solution-subpage-gallery-button {
	vertical-align: top;
	display: inline-block;
	font-family: Lato;
	font-weight: bold;
	color: #ffffff;
}

.solution-subpage-gallery-thumbnail-wrapper {
	display: inline-block;
	border: 1px solid #dfdfdf;
}

.solution-subpage-gallery-block {
	text-align: center;
	background-color: #f8f8f8;
}

